# ebhmm

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/cnacaller/: CNACaller.cpp  CNACaller.h
lib/config/: Config.cpp
lib/genomedata/: GenomeData.cpp  GenomeData.h
lib/hmm/: HMM.cpp  HMM.h
lib/inputparser/: InputParser.cpp  InputParser.h
lib/model/: Model.cpp  Model.h
lib/mydefine/: MyDefine.cpp  MyDefine.h
lib/threadpool/: ThreadPool.cpp  ThreadPool.h
src/: ebhmm.cpp  plotResults.m
testData/refs/: example.fa  example.sizes
